# launcher

./: .gitignore  CMakeLists.txt  build.bat  build.sh
app/: CMakeLists.txt  configure.h.cmake
app/LAUNCHER/: CMakeLists.txt
app/LAUNCHER/include/: common.h  launcher.h
app/LAUNCHER/src/: launcher.cpp  main.cpp
app/PATCHMAKER/: CMakeLists.txt
app/PATCHMAKER/compat/: dirent.h
app/PATCHMAKER/include/: common.h  dir.h  updater.h
app/PATCHMAKER/src/: main.cpp  updater.cpp
cmake/: FindCurl.cmake  FindLibSSH2.cmake  FindMbedTLS.cmake  FindZLIB.cmake
