cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
project(PATCHMAKER VERSION 0.1 LANGUAGES CXX C)
include(GNUInstallDirs)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../configure.h.cmake ${CMAKE_CURRENT_SOURCE_DIR}/include/configure.h)

IF(WIN32)
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:windows")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
ENDIF(WIN32)

SET(ZLIB_ROOT ${CMAKE_INSTALL_PREFIX})
find_library(ZLIB_LIBRARY NAMES zlibstaticd zlibstatic PATHS ${CMAKE_INSTALL_LIBDIR})

include(FindZLIB)
find_package(ZLIB REQUIRED)
message(STATUS "ZLIB LIBRARY: " "${ZLIB_LIBRARIES}")
list (APPEND LIBS "${ZLIB_LIBRARY}")

FIND_PACKAGE(MbedTLS REQUIRED)
list (APPEND LIBS "${MBEDTLS_LIBRARIES}")

include(FindCURL)
FIND_PACKAGE(CURL REQUIRED)
list (APPEND LIBS "${CURL_LIBRARIES}")


SET(FLTK_SKIP_OPENGL ON)
SET(FLTK_SKIP_FORMS ON) 
SET(FLTK_SKIP_IMAGES ON)
SET(FLTK_SKIP_FLUID ON)
FIND_PACKAGE(FLTK REQUIRED)
list (APPEND LIBS "${FLTK_LIBRARIES}")

include_directories(${CMAKE_INSTALL_FULL_INCLUDEDIR} ${MBEDTLS_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${FLTK_INCLUDE_DIR}  include compat)

LIST(APPEND SRC src/updater.cpp)
LIST(APPEND SRC src/main.cpp)

add_executable (${PROJECT_NAME} ${SRC})

target_link_libraries(${PROJECT_NAME} ${LIBS})

install(TARGETS ${PROJECT_NAME}
    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})
    
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Launcher)